--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "url": "https://dwk.io/"
   },
   "license": "ISC",
-  "description": "",
+  "description": "DWK's Cyber Home",
   "type": "module",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.1",
+    "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-img": "^6.0.4",
-    "@11ty/eleventy-plugin-webc": "^0.11.2"
+    "@11ty/eleventy-plugin-webc": "^0.11.2",
+    "@chrisburnell/eleventy-cache-webmentions": "^2.1.9",
+    "dotenv": "^16.6.1"
   }
 }
