--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@11ty/eleventy-img": "^6.0.4",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "dotenv": "^16.6.1",
-    "eleventy-plugin-gen-favicons": "^1.1.3"
+    "eleventy-plugin-gen-favicons": "^1.1.3",
+    "html-minifier-terser": "^7.2.0"
   }
 }
