--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dwk.io",
+  "name": "@dwk/dwk.io",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "dotenv": "^16.6.1",
     "eleventy-plugin-gen-favicons": "^1.1.3",
-    "html-minifier-terser": "^7.2.0"
+    "html-minifier-terser": "^7.2.0",
+    "jsonld-lint": "^0.3.0"
   }
 }
