--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@dwk/dwk.io",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "build": "npx @11ty/eleventy",
+    "postbuild": "node scripts/postbuild.js",
     "start": "npx @11ty/eleventy --serve"
   },
   "keywords": [],
@@ -19,7 +19,8 @@
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-img": "^6.0.4",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
-    "dotenv": "^16.6.1",
+    "cheerio": "^1.1.0",
+    "dotenv": "^17.2.0",
     "eleventy-plugin-gen-favicons": "^1.1.3",
     "html-minifier-terser": "^7.2.0",
     "jsonld-lint": "^0.3.0"
