--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/wrangler/config-schema.json",
-  "name": "dwk-io",
+  "name": "dwk",
   "compatibility_date": "2026-02-18",
   "main": "worker/index.ts",
   "assets": {
